--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <description>
         DateTime233 is a zero-designed DateTime API by flux-style.
-        重新设计的整套 DateTime API~
+        从 0 开始设计的整套 DateTime API~
     </description>
 
     <developers>
