--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.neko233</groupId>
     <artifactId>datetime233</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
 
     <name>datetime233</name>
     <url>https://github.com/SolarisNeko/datetime233/tree/main</url>
@@ -50,18 +50,17 @@
     <dependencies>
 
         <!-- Base  -->
-        <dependency>
-            <groupId>com.neko233</groupId>
-            <artifactId>skilltree-commons-core</artifactId>
-            <version>${skilltree-commons-core.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
-            <optional>true</optional>
-            <scope>compile</scope>
+            <version>1.18.26</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.realityforge.org.jetbrains.annotations</groupId>
+            <artifactId>org.jetbrains.annotations</artifactId>
+            <version>1.7.0</version>
         </dependency>
 
 
